--- a/Panoptic Quality.ipynb
+++ b/Panoptic Quality.ipynb
@@ -77,18 +77,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bins = [500, 1000, 1500, 2000, 5000]\n",
-    "binned = [[] for _ in bins]\n",
+    "bins = [0, 500, 1000, 1500, 2000, 5000]\n",
+    "binned = [[] for _ in bins[1:]]\n",
     "\n",
     "for match in matches:\n",
-    "    for i,b in enumerate(bins):\n",
+    "    for i,b in enumerate(bins[1:]):\n",
     "        if match.area < b:\n",
     "            binned[i].append(match.iou)\n",
     "            break\n",
     "            \n",
-    "plt.figure(figsize=(10,4))\n",
+    "plt.figure(figsize=(15,6))\n",
     "plt.boxplot(binned)\n",
-    "plt.xticks(range(1, 6), [f'<{b}' for b in bins])\n",
+    "plt.xticks(range(1, 6), [f'[{bins[i-1]},{bins[i]}[' for i in range(1, len(bins))])\n",
     "plt.xlabel('Area (px)')\n",
     "plt.ylabel('IoU')\n",
     "plt.show()"
