--- a/Panoptic Quality.ipynb
+++ b/Panoptic Quality.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "64a4d9be",
+   "id": "4f89d216",
    "metadata": {},
    "source": [
     "# Panoptic Quality : supplementary materials"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf1ae24b",
+   "id": "0ecbfd02",
    "metadata": {},
    "source": [
     "This notebook supplements the paper:\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebfbe313",
+   "id": "13b76f85",
    "metadata": {},
    "source": [
     "## Downloading and pre-processing the data\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7438c4cc",
+   "id": "c0119454",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53cfc167",
+   "id": "8747eae1",
    "metadata": {},
    "source": [
     "## 1. NuCLS"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1335f37f",
+   "id": "075d3f97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "797106e9",
+   "id": "a08f6def",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,15 +89,15 @@
     "plt.figure(figsize=(15,6))\n",
     "plt.boxplot(binned)\n",
     "plt.xticks(range(1, 6), [f'[{bins[i-1]},{bins[i]}[' for i in range(1, len(bins))])\n",
-    "plt.xlabel('Area (px)')\n",
-    "plt.ylabel('IoU')\n",
+    "plt.xlabel('Area (px)', fontsize=12)\n",
+    "plt.ylabel('IoU', fontsize=12)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69a196bc",
+   "id": "ba9fe9d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,23 +133,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f398a963",
+   "id": "6360dffc",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "x = np.array([match.iou for match in matches])\n",
+    "y = np.array([match.hd for match in matches])\n",
+    "\n",
+    "coeffs = np.polyfit(np.log(x), y, deg=1)\n",
+    "y_pred = sum([c*(x**(len(coeffs)-i-1)) for i,c in enumerate(coeffs)])\n",
+    "\n",
+    "x_ = np.linspace(0.01, 1., 100)\n",
     "plt.figure(figsize=(15,7))\n",
-    "for match in matches:\n",
-    "    plt.plot(match.iou, match.hd, 'b+')\n",
+    "plt.plot(x, y, 'b+')\n",
     "plt.plot([0, 1], [3, 3], 'k-')\n",
-    "plt.text(0, 4, 'HD=3')\n",
-    "plt.xlabel('IoU')\n",
-    "plt.ylabel('HD')\n",
+    "plt.plot(x_, sum([c*(np.log(x_)**(len(coeffs)-i-1)) for i,c in enumerate(coeffs)]), 'r-')\n",
+    "plt.text(0, -0.5, 'HD=3')\n",
+    "plt.xlabel('IoU', fontsize=14)\n",
+    "plt.ylabel('HD', fontsize=14)\n",
+    "plt.gca().tick_params(axis='both', which='major', labelsize=12)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "941caf3c",
+   "id": "ca1c9f94",
    "metadata": {},
    "source": [
     "## 2. MoNuSAC experiments"
@@ -158,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f2d084a",
+   "id": "9b1a9ba7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f314ee36",
+   "id": "d18882ce",
    "metadata": {},
    "source": [
     "Experiment on all nuclei: eroded, dilated and shifted"
@@ -181,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba651ccd",
+   "id": "09658e8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,24 +220,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "def9347a",
+   "id": "cac9d6a2",
    "metadata": {},
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "plt.figure(figsize=(10,5))\n",
+    "plt.figure(figsize=(15,7))\n",
     "plt.boxplot([[iou[3] for iou in ious[cl]] for cl in ious])\n",
     "plt.xticks([1, 2, 3, 4], [cl for cl in ious])\n",
-    "plt.ylabel('Area (px)')\n",
+    "plt.ylabel('Area (px)', fontsize=15)\n",
+    "plt.gca().tick_params(axis='both', which='major', labelsize=15)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1eaabeb6",
+   "id": "116f1108",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef63bc38",
+   "id": "99a96ccd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,14 +264,15 @@
     "plt.boxplot([[iou[1] for iou in ious[cl]] for cl in ious], positions=[2, 6, 10, 14], showfliers=False)\n",
     "plt.boxplot([[iou[2] for iou in ious[cl]] for cl in ious], positions=[3, 7, 11, 15], showfliers=False)\n",
     "plt.xticks([1, 2, 3, 5, 6, 7, 9, 10, 11, 13, 14, 15], ['Ee', 'Ed', 'Es', 'Le', 'Ld', 'Ls', 'Ne', 'Nd', 'Ns', 'Me', 'Md', 'Ms'])\n",
-    "plt.ylabel('IoU')\n",
+    "plt.ylabel('IoU', fontsize=14)\n",
+    "plt.gca().tick_params(axis='both', which='major', labelsize=14)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9aae73ce",
+   "id": "46fcf1b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5067bbff",
+   "id": "ec8b58a3",
    "metadata": {},
    "source": [
     "Simulating what would happen at 20x instead of 40x"
@@ -293,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a1e9ef1",
+   "id": "46441bcd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "987beaff",
+   "id": "358c6e21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91246cf6",
+   "id": "d57ae3a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80c70f65",
+   "id": "1322fb36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37f034e4",
+   "id": "c31f07b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d772bd79",
+   "id": "f03f2d69",
    "metadata": {},
    "source": [
     "Checking the results of the different team per nucleus:"
@@ -406,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b50355bd",
+   "id": "06b404c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d327a53",
+   "id": "f1ae54c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "088ab907",
+   "id": "b8bb1924",
    "metadata": {},
    "source": [
     "Full PQ computation from an example with many nuclei:"
@@ -456,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8ad847e",
+   "id": "a001d321",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6c5d595",
+   "id": "32b0e6f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2507a936",
+   "id": "a753c9b9",
    "metadata": {},
    "source": [
     "Creating synthetic \"predictions\" by either removing full objects (\"detection errors\"), or eroding the objects (\"segmentation errors\"):"
@@ -504,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12c627b4",
+   "id": "46c1e1d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8faaeb57",
+   "id": "70b63814",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90c4c956",
+   "id": "6a3c7183",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1eff1a1b",
+   "id": "731df46b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21914abd",
+   "id": "a57974c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e17cf71",
+   "id": "43fa79bb",
    "metadata": {},
    "source": [
     "Results for the \"detection errors\" predictions:"
@@ -591,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96f41dbf",
+   "id": "c68fd0b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "288c6dcb",
+   "id": "0944e387",
    "metadata": {},
    "source": [
     "Results for the \"segmentation errors\" predictions"
@@ -611,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "849c84b4",
+   "id": "38961306",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +634,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60667cd7",
+   "id": "bce01548",
    "metadata": {},
    "source": [
     "Visual comparison of the results"
@@ -631,26 +643,76 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e4daf16",
+   "id": "926732c3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.patches as patches\n",
+    "\n",
     "plt.figure(figsize=(20,20))\n",
-    "plt.subplot(1, 3, 1)\n",
+    "sq = patches.Rectangle((1100, 1300), 200, 200, linewidth=2, edgecolor='k', facecolor='none', zorder=100)\n",
+    "ax = plt.subplot(1, 3, 1)\n",
     "plt.imshow(im)\n",
     "plt.contour(pred_d[..., 1]==1, linewidths=0.5, alpha=1, colors=['yellow'])\n",
     "plt.contour(pred_d[..., 1]==2, linewidths=0.5, alpha=1, colors=['blue'])\n",
+    "ax.add_patch(sq)\n",
     "plt.title(f\"PQ={pq_d['PQ']:.2f} (detection errors)\")\n",
-    "plt.subplot(1, 3, 2)\n",
+    "sq2 = patches.Rectangle((1100, 1300), 200, 200, linewidth=2, edgecolor='k', facecolor='none', zorder=100)\n",
+    "ax = plt.subplot(1, 3, 2)\n",
     "plt.imshow(im)\n",
     "plt.contour(nary[..., 1]==1, linewidths=0.5, alpha=1, colors=['yellow'])\n",
     "plt.contour(nary[..., 1]==2, linewidths=0.5, alpha=1, colors=['blue'])\n",
     "plt.title('Reference')\n",
-    "plt.subplot(1, 3, 3)\n",
+    "ax.add_patch(sq2)\n",
+    "sq3 = patches.Rectangle((1100, 1300), 200, 200, linewidth=2, edgecolor='k', facecolor='none', zorder=100)\n",
+    "ax = plt.subplot(1, 3, 3)\n",
     "plt.imshow(im)\n",
     "plt.contour(pred_s[..., 1]==1, linewidths=0.5, alpha=1, colors=['yellow'])\n",
     "plt.contour(pred_s[..., 1]==2, linewidths=0.5, alpha=1, colors=['blue'])\n",
     "plt.title(f\"PQ={pq_s['PQ']:.2f} (segmentation errors)\")\n",
+    "ax.add_patch(sq3)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5720e25",
+   "metadata": {},
+   "source": [
+    "Details"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6b21d99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "detail_d = pred_d[1300:1500,1100:1300]\n",
+    "detail_n = nary[1300:1500,1100:1300]\n",
+    "detail_s = pred_s[1300:1500,1100:1300]\n",
+    "detail = im[1300:1500,1100:1300]\n",
+    "\n",
+    "plt.figure(figsize=(20,20))\n",
+    "plt.subplot(1, 3, 1)\n",
+    "plt.imshow(detail)\n",
+    "plt.contour(detail_d[..., 1]==1, linewidths=0.5, alpha=1, colors=['yellow'])\n",
+    "plt.contour(detail_d[..., 1]==2, linewidths=0.5, alpha=1, colors=['blue'])\n",
+    "# plt.title(f\"PQ={pq_d['PQ']:.2f} (detection errors)\")\n",
+    "plt.axis('off')\n",
+    "plt.subplot(1, 3, 2)\n",
+    "plt.imshow(detail)\n",
+    "plt.contour(detail_n[..., 1]==1, linewidths=0.5, alpha=1, colors=['yellow'])\n",
+    "plt.contour(detail_n[..., 1]==2, linewidths=0.5, alpha=1, colors=['blue'])\n",
+    "plt.axis('off')\n",
+    "# plt.title('Reference')\n",
+    "plt.subplot(1, 3, 3)\n",
+    "plt.imshow(detail)\n",
+    "plt.contour(detail_s[..., 1]==1, linewidths=0.5, alpha=1, colors=['yellow'])\n",
+    "plt.contour(detail_s[..., 1]==2, linewidths=0.5, alpha=1, colors=['blue'])\n",
+    "plt.axis('off')\n",
+    "# plt.title(f\"PQ={pq_s['PQ']:.2f} (segmentation errors)\")\n",
     "plt.show()"
    ]
   }
