Added erosion stats

--- a/Panoptic Quality.ipynb
+++ b/Panoptic Quality.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4f89d216",
+   "id": "eb860032",
    "metadata": {},
    "source": [
     "# Panoptic Quality : supplementary materials"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ecbfd02",
+   "id": "168c3455",
    "metadata": {},
    "source": [
     "This notebook supplements the paper:\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13b76f85",
+   "id": "c5ead40a",
    "metadata": {},
    "source": [
     "## Downloading and pre-processing the data\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0119454",
+   "id": "5e9e1565",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8747eae1",
+   "id": "71828cac",
    "metadata": {},
    "source": [
     "## 1. NuCLS"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "075d3f97",
+   "id": "bbcc97cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a08f6def",
+   "id": "e5fbf175",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba9fe9d7",
+   "id": "8fde8f14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6360dffc",
+   "id": "1e4a9071",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca1c9f94",
+   "id": "1b7d1b17",
    "metadata": {},
    "source": [
     "## 2. MoNuSAC experiments"
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b1a9ba7",
+   "id": "abbee207",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d18882ce",
+   "id": "99b1ddc1",
    "metadata": {},
    "source": [
     "Experiment on all nuclei: eroded, dilated and shifted"
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09658e8f",
+   "id": "d1654003",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cac9d6a2",
+   "id": "d3913cbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "116f1108",
+   "id": "ebdf8291",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99a96ccd",
+   "id": "0d613c13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46fcf1b8",
+   "id": "e6f74610",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec8b58a3",
+   "id": "880bc1ae",
    "metadata": {},
    "source": [
     "Simulating what would happen at 20x instead of 40x"
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46441bcd",
+   "id": "2be57908",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "358c6e21",
+   "id": "1798e862",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d57ae3a0",
+   "id": "5c586fe4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1322fb36",
+   "id": "4e6d47a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c31f07b3",
+   "id": "4830cc07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f03f2d69",
+   "id": "1ee52fc8",
    "metadata": {},
    "source": [
     "Checking the results of the different team per nucleus:"
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06b404c2",
+   "id": "e47eff24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1ae54c3",
+   "id": "9795f9b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8bb1924",
+   "id": "c3463da5",
    "metadata": {},
    "source": [
     "Full PQ computation from an example with many nuclei:"
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a001d321",
+   "id": "1f0e5798",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32b0e6f1",
+   "id": "a3c4db94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a753c9b9",
+   "id": "823d255a",
    "metadata": {},
    "source": [
     "Creating synthetic \"predictions\" by either removing full objects (\"detection errors\"), or eroding the objects (\"segmentation errors\"):"
@@ -516,17 +516,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46c1e1d6",
+   "id": "a89426da",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tqdm import tqdm\n",
+    "\n",
     "pred_d = np.zeros_like(nary)\n",
     "\n",
     "# randomly remove 40% of the objects\n",
     "np.random.seed(5)\n",
     "r = np.random.random((len(np.unique(nary[..., 0]))))\n",
     "newi = 0\n",
-    "for i in np.unique(nary[..., 0]):\n",
+    "for i in tqdm(np.unique(nary[..., 0])):\n",
     "    if i == 0:\n",
     "        continue\n",
     "    if r[i] > 0.4:\n",
@@ -538,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70b63814",
+   "id": "dc6e7580",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,11 +550,13 @@
     "pred_s = np.zeros_like(nary)\n",
     "\n",
     "# Remove small part of each object\n",
+    "rs = []\n",
     "for i in tqdm(np.unique(nary[..., 0])):\n",
     "    if i == 0:\n",
     "        continue\n",
     "    area = (nary[..., 0]==i).sum()\n",
     "    r = int(np.round(np.sqrt(area/np.pi)*0.15))\n",
+    "    rs.append(r)\n",
     "    mask = erosion(nary[..., 0]==i, disk(r))\n",
     "    pred_s[mask, 0] = i\n",
     "    pred_s[mask, 1] = nary[nary[..., 0]==i, 1].max()"
@@ -561,7 +565,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a3c7183",
+   "id": "c695a0cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Mean erosion = {np.mean(rs)}px, median erosion = {np.median(rs)}px\")\n",
+    "print(f\"Count of objects with erosion of ... px:\")\n",
+    "rs = np.array(rs)\n",
+    "for r in np.unique(rs):\n",
+    "    print(f\"{r}px: {(rs==r).sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "105e2747",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "731df46b",
+   "id": "9f75b315",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a57974c7",
+   "id": "b3ed6ee0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43fa79bb",
+   "id": "974cef17",
    "metadata": {},
    "source": [
     "Results for the \"detection errors\" predictions:"
@@ -603,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c68fd0b2",
+   "id": "5d5d74c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0944e387",
+   "id": "2f803988",
    "metadata": {},
    "source": [
     "Results for the \"segmentation errors\" predictions"
@@ -623,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38961306",
+   "id": "4137aaf8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bce01548",
+   "id": "cf82644c",
    "metadata": {},
    "source": [
     "Visual comparison of the results"
@@ -643,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "926732c3",
+   "id": "0e29d1f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5720e25",
+   "id": "4e793635",
    "metadata": {},
    "source": [
     "Details"
@@ -685,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6b21d99",
+   "id": "50f788db",
    "metadata": {},
    "outputs": [],
    "source": [
